@@ -21,25 +21,12 @@ local print = TMW.print
 local Processor = TMW.Classes.IconDataProcessor:New("INRANGE", "inRange")
 
 -- Values:
-	-- 0 - Not in range
-	-- 1 - In range
+	-- false - Not in range
+	-- true - In range
 	-- nil - Unknown/unspecified/unreported/unobtainable/un/un/un/unetc.
-	
-function Processor:CompileFunctionSegment(t)
-	-- GLOBALS: inRange
-	t[#t+1] = [[
-	
-	if attributes.inRange ~= inRange then
-		if inRange ~= nil and inRange ~= 1 and inRange ~= 0 then
-			error("Icon attribute inRange must be 0, 1, or nil!", 3)
-		end
-		attributes.inRange = inRange
 
-		TMW:Fire(INRANGE.changedEvent, icon, inRange)
-		doFireIconUpdated = true
-	end
-	--]]
-end
+
+-- Processor:CompileFunctionSegment(t) is default.
 
 TMW:RegisterCallback("TMW_ICON_SETUP_POST", function(event, icon)
 	if not TMW.Locked then
